I finally did it back on track